syntax = "proto3";
package wire;


message InternalTransaction {
  uint64 Amount = 1;
  bytes Receiver = 2;
}

message WireBlockSignature {
  int64 Index = 1;
  string Signature = 2;
}

message Event {
  uint64 Index = 1;
  bytes Creator = 2;
  repeated bytes Parents = 3;
  uint64 LamportTime = 4;
  repeated InternalTransaction InternalTransactions = 5;
  repeated bytes ExternalTransactions = 6;
  repeated WireBlockSignature Signature = 7;
}