syntax = "proto3";
package poset;

enum TransactionType {
  PEER_INFO = 0;
  POS_TRANSFER = 1;
}

message InternalTransaction {
  TransactionType Type = 1;
  string NetAddr = 2;
  bytes PubKey = 3;
  uint64 Amount = 4;
}

message BlockSignature {
  bytes Validator = 1;
  int64 Index = 2;
  string Signature = 3;
}

message EventBody {
  repeated bytes Transactions = 1;
  repeated InternalTransaction InternalTransactions = 2;
  repeated bytes Parents = 3;
  bytes CreatorPK = 4;
  int64 Index = 5;
  repeated BlockSignature BlockSignatures = 6;
}

message EventMessage {
  EventBody Body = 1;
  string Signature = 2;
  bytes FlagTable = 3;
  repeated bytes ClothoProof = 4;
  int64 SelfParentIndex = 5;
  bytes OtherParentCreatorID = 6;
  int64 OtherParentIndex = 7;
  bytes CreatorID = 8;
  int64 TopologicalIndex = 9;
  bytes Hash = 10;
}
